--- a/notritionVendorsAPP/Controller/hightRating/view/AddNewCommentCell.xib
+++ b/notritionVendorsAPP/Controller/hightRating/view/AddNewCommentCell.xib
@@ -50,12 +50,13 @@
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits"/>
                     </textField>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="Enter content" translatesAutoresizingMaskIntoConstraints="NO" id="1Wc-La-k9e">
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="Enter content " translatesAutoresizingMaskIntoConstraints="NO" id="1Wc-La-k9e">
                         <rect key="frame" x="10" y="85" width="301" height="98.5"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="zEL-v0-Bua"/>
                         </constraints>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
