--- a/notritionVendorsAPP/View/Base.lproj/Main.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/Main.storyboard
@@ -401,13 +401,13 @@
                                                     <rect key="frame" x="10" y="10" width="404" height="79.666666666666671"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1eV-zD-OJn" customClass="CustomImageView" customModule="notritionVendorsAPP" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="0.0" width="80" height="79.666666666666671"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="70" height="79.666666666666671"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="80" id="bsS-IQ-ZkN"/>
+                                                                <constraint firstAttribute="width" constant="70" id="bsS-IQ-ZkN"/>
                                                             </constraints>
                                                         </imageView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="hfv-df-et4">
-                                                            <rect key="frame" x="95" y="0.0" width="309" height="79.666666666666671"/>
+                                                            <rect key="frame" x="85" y="0.0" width="319" height="79.666666666666671"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E7t-TQ-jWn">
                                                                     <rect key="frame" x="0.0" y="0.0" width="41.666666666666664" height="20.333333333333332"/>
@@ -418,11 +418,17 @@
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7o0-TC-3Ld">
                                                                     <rect key="frame" x="0.0" y="21.333333333333332" width="35.333333333333336" height="16.999999999999996"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                                    <nil key="textColor"/>
+                                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8BL-is-rU0">
+                                                                    <rect key="frame" x="0.0" y="39.333333333333336" width="35.333333333333336" height="17"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                    <color key="textColor" red="0.1062027202" green="0.64605805839999997" blue="0.011073882889999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mPL-ca-oqL" customClass="CosmosView" customModule="Cosmos">
-                                                                    <rect key="frame" x="0.0" y="39.333333333333329" width="120" height="40.333333333333329"/>
+                                                                    <rect key="frame" x="0.0" y="57.333333333333336" width="120" height="22.333333333333336"/>
                                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <userDefinedRuntimeAttributes>
                                                                         <userDefinedRuntimeAttribute type="color" keyPath="filledColor">
@@ -450,10 +456,11 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="address" destination="7o0-TC-3Ld" id="WeH-Eq-HaR"/>
+                                            <outlet property="distance" destination="8BL-is-rU0" id="KdS-Xi-0g0"/>
                                             <outlet property="itemImage" destination="1eV-zD-OJn" id="B34-Y6-NPb"/>
                                             <outlet property="itemName" destination="E7t-TQ-jWn" id="9hA-to-o5U"/>
                                             <outlet property="rating" destination="mPL-ca-oqL" id="eFx-mF-bvC"/>
-                                            <outlet property="shopName" destination="7o0-TC-3Ld" id="orh-Wc-g0m"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
