--- a/notritionVendorsAPP/View/DetailFood.storyboard
+++ b/notritionVendorsAPP/View/DetailFood.storyboard
@@ -13,7 +13,7 @@
         <!--View Item Controller-->
         <scene sceneID="eOO-Nf-Yys">
             <objects>
-                <viewController storyboardIdentifier="DetaildFoodStoryboardID" id="RtO-mk-4GC" customClass="ViewItemController" customModule="notritionVendorsAPP" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DetailFoodStoryboardID" id="RtO-mk-4GC" customClass="ViewItemController" customModule="notritionVendorsAPP" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="c9E-K6-sGa">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
